--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="./index.html" hreflang="en"><span>Web</span>Studio</a>
         <ul>
             <!--Навигация на другие станицы-->
-            <li><a href="">Студия</a></li>
+            <li><a href="#studio">Студия</a></li>
             <li><a href="./portfolio.html" >Портфолио</a></li>
             <li><a href="#contacts">Контакты</a></li>
         </ul>
@@ -31,16 +31,15 @@
     <main>
         <!--Главный герой. Должен находиться в хеддере?-->
         <div>
-            <section>
+            <section id="studio">
                 <h1>Эффективные решения <br/>для вашего бизнеса</h1>
                 <button type="button">Заказать услугу</button>
             </section>
         </div>
 
-        <!--Секция 4-х блоков с заголовками и текстом под ними-->
+        <!--Секция 4-х блоков с заголовками и текстом под ними. Скрыт заголовок-->
         <section>
-            <!--Нужно спрятать заголовок-->
-            <h2>Секция качества</h2>
+            <h2 hidden>Секция качества</h2>
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
@@ -106,11 +105,25 @@
     </main>
 
     <!--Футер с логотипом и адресом-->
-    <footer id="contacts">
-        <a href="./index.html" hreflang="en">WebStudio</a>
-        <address> г. Киев, пр-т Леси Украинки, 26 </address>
-        <a href="mailo:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+380961111111</a>
+    <footer>
+        <section id="contacts">
+            <address>
+            <ul>
+                <li>
+                    <a href="./index.html" hreflang="en">WebStudio</a>
+                </li>
+                <li>
+                <a href="https://goo.gl/maps/MdQDLqu88i6RNA2y6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                </li>
+                <li>
+                <a href="mailo:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                <a href="tel:+380961111111">+380961111111</a>
+                </li>
+            </ul>
+            </address>
+        </section>      
     </footer>
     
 </body>
