--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" href="#" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -17,107 +14,105 @@
 </head>
 <body>
 
-    <header>
+    <header class="header">
         <nav>
-        <a class="link logo" href="./index.html" hreflang="en">
+        <a class="link logo-header" href="./index.html" hreflang="en">
             <span class="logo-style">Web</span>Studio
         </a>
         <ul class="list navigation">
-            <li><a class="link activ-element nav-link" href="#studio">Студия</a></li>
+            <li><a class="link current nav-link" href="#studio">Студия</a></li>
             <li><a class="link nav-link" href="./portfolio.html">Портфолио</a></li>
             <li><a class="link nav-link" href="#contacts">Контакты</a></li>
         </ul> 
         </nav>
 
         <ul class="list communication">
-            <li><a class="link activ-element nav-link" href="mailo:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link current nav-link" href="mailo:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="link nav-link" href="tel:+380961111111">+380961111111</a></li>
         </ul>
     </header>
 
     <main>
-        <!--Главный герой. Должен находиться в хеддере?-->
+        <!--СЕКЦИЯ HERO-->
         <div>
             <section class="section-hiro" id="studio">
                 <h1 class="headlines-hero">Эффективные решения <br/>для вашего бизнеса</h1>
-                <button class="button-hero" type="button">Заказать услугу</button>
+                <button class="button-hero text-button-hero" type="button">Заказать услугу</button>
             </section>
         </div>
 
-        <!--Секция 4-х блоков с заголовками и текстом под ними. Скрыт заголовок-->
-        <section>
+        <!--СЕКЦИЯ КАЧЕСТВА. Скрытый заголовок-->
+        <section class="studio-section-quality">
             <h2 hidden>Секция качества</h2>
-            <ul class="list">
+            <ul >
                 <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="studio-section-quality-list-header">Внимание к деталям</h3>
+                    <p class="studio-section-quality-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="studio-section-quality-list-header">Пунктуальность</h3>
+                    <p class="studio-section-quality-text" >Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <h3 class="studio-section-quality-list-header">Планирование</h3>
+                    <p class="studio-section-quality-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="studio-section-quality-list-header">Современные технологии</h3>
+                    <p class="studio-section-quality-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
 
-        <!--Секция ряд из 3-х картинок-->
-        <section>
-            <h2>Чем мы занимаемся</h2>
-
+        <!--СЕКЦИЯ ЧЕМ МЫ ЗАНИМАЕМСЯ-->
+        <section class="studio-section-competencies">
+            <h2 class="studio-section-competencies-header">Чем мы занимаемся</h2>
             <ul class="list">
                 <li><img src="./images/img1.jpg" alt="Изображение процесса написания кода" width="370" height="294"/></li>
                 <li><img src="./images/img2.jpg" alt="Изображение процесса создания приложения для телефона" width="370" height="294"/></li>
                 <li><img src="./images/img3.jpg" alt="Изображение процесса создания веб-дизайна" width="370" height="294"/></li>
             </ul>
-            
         </section>
 
-        <!--Секция ряд из 4-х фотографий c именами и должностями-->
-        <section>
-            <h2>Наша команда</h2>
-            <ul class="list">
-                <li>
-                    <img src="./images/foto1.jpg" alt="Молодой тёмноволосый мужчина в очках и в коричневой рубашке" width="270"/>
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>                     
+        <!--СЕКЦИЯ НАША КОМАНДА-->
+        <section class="studio-section-team">
+            <h2 class="studio-section-team-header">Наша команда</h2>
+            <ul class="list ">
+                <li class="studio-section-team-list">
+                    <img class="studio-section-team-list-img"src="./images/foto1.jpg" alt="Молодой тёмноволосый мужчина в очках и в коричневой рубашке" width="270"/>
+                    <h3 class="studio-section-team-list-header" >Игорь Демьяненко</h3>
+                    <p class="studio-section-team-list-text" lang="en">Product Designer</p>                     
                 </li>
-
-                <li>
+                <li class="studio-section-team-list">
                     <img src="./images/foto2.jpg" alt="Молодая белокурая девушка в черном пиджаке" width="270" />
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>                                      
+                    <h3 class="studio-section-team-list-header">Ольга Репина</h3>
+                    <p class="studio-section-team-list-text" lang="en">Frontend Developer</p>                                      
                 </li>
 
-                <li>
+                <li class="studio-section-team-list">
                     <img src="./images/foto3.jpg" alt="Молодой тёмноволосый мужчина в голубой рубашке" width="270" />
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>                    
+                    <h3 class="studio-section-team-list-header">Николай Тарасов</h3>
+                    <p class="studio-section-team-list-text" lang="en">Marketing</p>                    
                 </li>
 
-                <li>
+                <li class="studio-section-team-list">
                     <img src="./images/foto4.jpg" alt="Молодой тёмноволосый мужчина в черной футболке" width="270" />
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                    <h3 class="studio-section-team-list-header">Михаил Ермаков</h3>
+                    <p class="studio-section-team-list-text" lang="en">UI Designer</p>
                 </li>
             </ul>
-        </section>
+        </section> 
         
     </main>
 
-    <!--Футер с логотипом и адресом-->
-    <footer>
+    <footer class="footer">
         <section id="contacts">
-            <address>
+            <address class="contact-list">
             <ul class="list">
                 <li>
-                <a class="link" href="./index.html" hreflang="en">WebStudio</a>
+                <a class="link logo-footer" href="./index.html" hreflang="en">
+                    <span class="logo-style">Web</span>Studio
+                </a>
                 </li>
                 <li>
                 <a class="link" href="https://goo.gl/maps/MdQDLqu88i6RNA2y6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
