--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
             <span class="logo-style">Web</span>Studio
         </a>
         <ul class="list navigation">
-            <li><a class="link current nav-link" href="#studio">Студия</a></li>
-            <li><a class="link nav-link" href="./portfolio.html">Портфолио</a></li>
-            <li><a class="link nav-link" href="#contacts">Контакты</a></li>
+            <li><a class="link current properties-link" href="#studio">Студия</a></li>
+            <li><a class="link properties-link" href="./portfolio.html">Портфолио</a></li>
+            <li><a class="link properties-link" href="#contacts">Контакты</a></li>
         </ul> 
         </nav>
 
         <ul class="list communication">
-            <li><a class="link current nav-link" href="mailo:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link nav-link" href="tel:+380961111111">+380961111111</a></li>
+            <li><a class="link current properties-link" href="mailo:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link properties-link" href="tel:+380961111111">+380961111111</a></li>
         </ul>
     </header>
 
@@ -106,24 +106,22 @@
     </main>
 
     <footer class="footer">
-        <section id="contacts">
-            <address class="contact-list">
-            <ul class="list">
-                <li>
-                <a class="link logo-footer" href="./index.html" hreflang="en">
-                    <span class="logo-style">Web</span>Studio
-                </a>
-                </li>
-                <li>
-                <a class="link" href="https://goo.gl/maps/MdQDLqu88i6RNA2y6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
-                </li>
-                <li>
-                <a class="link" href="mailo:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                <a class="link" href="tel:+380961111111">+380961111111</a>
-                </li>
-            </ul>
+        <section  class="information-contacts" id="contacts">
+            <a class="link logo-footer" href="./index.html" hreflang="en">
+                <span class="logo-style">Web</span>Studio
+            </a>
+            <address>
+                <ul class="list ">
+                    <li>
+                        <a class="link address-link" href="https://goo.gl/maps/MdQDLqu88i6RNA2y6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                    </li>
+                    <li>
+                        <a class="link mailo-link" href="mailo:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a class="link phone-link" href="tel:+380961111111">+380961111111</a>
+                    </li>
+                </ul>
             </address>
         </section>      
     </footer>
