--- a/index.html
+++ b/index.html
@@ -13,35 +13,31 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-
     <header class="header">
         <nav>
         <a class="link logo-header" href="./index.html" hreflang="en">
             <span class="logo-style">Web</span>Studio
         </a>
         <ul class="list navigation">
-            <li><a class="link current properties-link" href="#studio">Студия</a></li>
+            <li><a class="link current properties-link" href="./index.html">Студия</a></li>
             <li><a class="link properties-link" href="./portfolio.html">Портфолио</a></li>
             <li><a class="link properties-link" href="#contacts">Контакты</a></li>
         </ul> 
         </nav>
-
         <ul class="list communication">
-            <li><a class="link current properties-link" href="mailo:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link properties-link" href="tel:+380961111111">+380961111111</a></li>
+            <li><a class="link  properties-link current" href="mailo:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link properties-link communication-color-link" href="tel:+380961111111">+380961111111</a></li>
         </ul>
     </header>
-
     <main>
-        <!--СЕКЦИЯ HERO-->
+<!--СЕКЦИЯ HERO-->
         <div>
-            <section class="section-hiro" id="studio">
+            <section class="section-hiro">
                 <h1 class="headlines-hero">Эффективные решения <br/>для вашего бизнеса</h1>
                 <button class="button-hero text-button-hero" type="button">Заказать услугу</button>
             </section>
         </div>
-
-        <!--СЕКЦИЯ КАЧЕСТВА. Скрытый заголовок-->
+<!--СЕКЦИЯ КАЧЕСТВА. Скрытый заголовок-->
         <section class="studio-section-quality">
             <h2 hidden>Секция качества</h2>
             <ul >
@@ -63,8 +59,7 @@
                 </li>
             </ul>
         </section>
-
-        <!--СЕКЦИЯ ЧЕМ МЫ ЗАНИМАЕМСЯ-->
+<!--СЕКЦИЯ ЧЕМ МЫ ЗАНИМАЕМСЯ-->
         <section class="studio-section-competencies">
             <h2 class="studio-section-competencies-header">Чем мы занимаемся</h2>
             <ul class="list">
@@ -73,8 +68,7 @@
                 <li><img src="./images/img3.jpg" alt="Изображение процесса создания веб-дизайна" width="370" height="294"/></li>
             </ul>
         </section>
-
-        <!--СЕКЦИЯ НАША КОМАНДА-->
+<!--СЕКЦИЯ НАША КОМАНДА-->
         <section class="studio-section-team">
             <h2 class="studio-section-team-header">Наша команда</h2>
             <ul class="list ">
@@ -88,13 +82,11 @@
                     <h3 class="studio-section-team-list-header">Ольга Репина</h3>
                     <p class="studio-section-team-list-text" lang="en">Frontend Developer</p>                                      
                 </li>
-
                 <li class="studio-section-team-list">
                     <img src="./images/foto3.jpg" alt="Молодой тёмноволосый мужчина в голубой рубашке" width="270" />
                     <h3 class="studio-section-team-list-header">Николай Тарасов</h3>
                     <p class="studio-section-team-list-text" lang="en">Marketing</p>                    
                 </li>
-
                 <li class="studio-section-team-list">
                     <img src="./images/foto4.jpg" alt="Молодой тёмноволосый мужчина в черной футболке" width="270" />
                     <h3 class="studio-section-team-list-header">Михаил Ермаков</h3>
@@ -102,9 +94,7 @@
                 </li>
             </ul>
         </section> 
-        
     </main>
-
     <footer class="footer">
         <section  class="information-contacts" id="contacts">
             <a class="link logo-footer" href="./index.html" hreflang="en">
@@ -125,6 +115,5 @@
             </address>
         </section>      
     </footer>
-    
-</body>
+ </body>
 </html>
