--- a/portfolio.html
+++ b/portfolio.html
@@ -12,190 +12,170 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-
 <body>
-    
     <header class="header">
         <nav>
             <a class="link logo-header" href="./index.html" hreflang="en">
                 <span class="logo-style">Web</span>Studio
             </a>
             <ul class="list navigation">
-                <li><a class="link current properties-link" href="#studio">Студия</a></li>
-                <li><a class="link properties-link" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link  properties-link" href="./index.html">Студия</a></li>
+                <li><a class="link current properties-link" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="link properties-link" href="#contacts">Контакты</a></li>
             </ul>
         </nav>
-    
         <ul class="list communication">
-            <li><a class="link current properties-link" href="mailo:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link properties-link" href="tel:+380961111111">+380961111111</a></li>
+            <li><a class="link properties-link communication-color-link" href="mailo:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="link properties-link communication-color-link" href="tel:+380961111111">+380961111111</a></li>
         </ul>
     </header>
-
     <main>
-        <section>
-<!--Ряд из 5-ти кнопок-фильтров. Скрыт заголовок-->
+        <section class="portfolio-section-work-examples">
+<!--СЕКЦИЯ ФИЛЬТРЫ-->
         <saction id="filter">
-            <h1 hidden>Фильтр</h1>
+            <h1 hidden >Фильтр</h1>
             <ul class="list">
                 <li>
-                    <button type="button">Все</button>
+                    <button class="portfolio-filter-all current" type="button">Все</button>
                 </li>
                 <li>
-                    <button type="button">Веб-сайты</button>
+                    <button class="portfolio-filter current" type="button">Веб-сайты</button>
                 </li>
                 <li>
-                    <button type="button">Приложения</button>
+                    <button class="portfolio-filter current" type="button">Приложения</button>
                 </li>
                 <li>
-                    <button type="button">Дизайн</button>
+                    <button class="portfolio-filter current" type="button">Дизайн</button>
                 </li>
                 <li>
-                    <button type="button">Маркетинг</button>
+                    <button class="portfolio-filter current" type="button">Маркетинг</button>
                 </li>
             </ul>
-            </saction>
-<!--Cписок из 9-х картинок c 9-ю проектами. Скрыт заголовок-->
+<!--СЕКЦИЯ ПРИМЕРЫ РАБОТ-->
+        </saction class="portfolio-work-example">
             <ul class="list">
                 <li>
-                    <button type="button">
-                        <img 
-                        src="./images/portfolio1.jpg" 
-                        alt="Изображение ноутбука на котором открыта сраница сайта технокряк" 
-                        width="370"
-                        height="294"
-                        />
-                    </button>
+                    <img 
+                    src="./images/portfolio1.jpg" 
+                    alt="Изображение ноутбука на котором открыта сраница сайта технокряк" 
+                    width="370"
+                    height="294"
+                    />
                     <section>
-                        <h2>Технокряк</h2>
-                        <p>Веб-сайт</p>
+                        <h2 class="portfolio-work-example-heder">Технокряк</h2>
+                        <p class="portfolio-work-example-text" >Веб-сайт</p>
                     </section>   
                 </li>
                 <li>
-                    <button type="button">
-                        <img 
-                        src="./images/portfolio2.jpg" 
-                        alt="Изображение как двое мужчин играют в баскетбол"
-                        width="370" 
-                        height="294" 
-                        />
-                    </button>
+                    <img 
+                    src="./images/portfolio2.jpg" 
+                    alt="Изображение как двое мужчин играют в баскетбол"
+                    width="370" 
+                    height="294" 
+                    />
                     <section>
-                        <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-                        <p>Дизайн</p>
+                        <h2 class="portfolio-work-example-heder">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                        <p class="portfolio-work-example-text">Дизайн</p>
                     </section>    
                 </li>
                 <li>
-                    <button type="button">
-                        <img 
-                        src="./images/portfolio3.jpg" 
-                        alt="Изображение рыбы с надписью названия ресторана" 
-                        width="370" 
-                        height="294" />
-                    </button>
+                    <img 
+                    src="./images/portfolio3.jpg" 
+                    alt="Изображение рыбы с надписью названия ресторана" 
+                    width="370" 
+                    height="294" />
                     <section>
-                        <h2>Ресторан<span lang="en"> Seafood</span></h2>
-                        <p>Приложение</p>
+                        <h2 class="portfolio-work-example-heder">Ресторан<span lang="en"> Seafood</span></h2>
+                        <p class="portfolio-work-example-text">Приложение</p>
                     </section>    
                 </li>
                 <li>
-                    <button type="button">
-                        <img 
-                        src="./images/portfolio4.jpg" 
-                        alt="Изображение наушников черного цвета" 
-                        width="370"
-                        height="294" 
-                        />
-                    </button>
+                    <img 
+                    src="./images/portfolio4.jpg" 
+                    alt="Изображение наушников черного цвета" 
+                    width="370"
+                    height="294" 
+                    />
                     <section>
-                        <h2>Проект<span lang="en"> Prime</span></h2>
-                        <p>Маркетинг</p>
+                        <h2 class="portfolio-work-example-heder">Проект<span lang="en"> Prime</span></h2>
+                        <p class="portfolio-work-example-text">Маркетинг</p>
                     </section>    
                 </li>
                 <li>
-                    <button type="button">
-                        <img 
-                        src="./images/portfolio5.jpg" 
-                        alt="Изображение двух бумажніх коробок белого и коричневого цвета" 
-                        width="370" 
-                        height="294" 
-                        />
-                        </button>
-                        <section>
-                            <h2>Проект<span lang="en"> Boxes</span></h2>
-                            <p>Приложение</p>
-                        </section>
-                </li>
-                <li>
-                    <button type="button">
-                        <img src="./images/portfolio6.jpg" 
-                        alt="Изображение монитора на котором откріт веб-сайт компании"
-                        width="370" 
-                        height="294" 
-                        />
-                        </button>
-                        <section>
-                            <h2 lang="en">Inspiration has no Borders</h2>
-                            <p>Веб-сайт</p>
-                        </section>
-                </li>
-                <li>
-                    <button type="button">
-                        <img src="./images/portfolio7.jpg" 
-                        alt="Изображение расскрытой книги"
-                        width="370" 
-                        height="294" 
-                        />
-                    </button>
+                    <img 
+                    src="./images/portfolio5.jpg" 
+                    alt="Изображение двух бумажніх коробок белого и коричневого цвета" 
+                    width="370" 
+                    height="294" 
+                    />
                     <section>
-                        <h2>Издание<span lang="en"> Limited Edition</span></h2>
-                        <p>Дизайн</p>
-                    </section>   
-                </li>
-                <li>
-                    <button type="button">
-                        <img src="./images/portfolio7.jpg" 
-                        alt="Изображение расскрытой книги"
-                        width="370" 
-                        height="294" 
-                        />
-                    </button>
-                    <section>
-                        <h2>Издание<span lang="en"> Limited Edition</span></h2>
-                        <p>Дизайн</p>
-                    </section>   
-                </li>
-                <li>
-                    <button type="button">
-                        <img 
-                        src="./images/portfolio8.jpg" 
-                        alt="Изображение бумажной бирки с надписью" 
-                        width="370" 
-                        height="294" 
-                        />
-                    </button>
-                    <section>
-                        <h2>Проект<span lang="en"> LAB</span></h2>
-                        <p>Маркетинг</p>
+                        <h2 class="portfolio-work-example-heder">Проект<span lang="en"> Boxes</span></h2>
+                        <p class="portfolio-work-example-text">Приложение</p>
                     </section>
                 </li>
                 <li>
-                    <button type="button">
-                        <img src="./images/portfolio9.jpg" alt="Изображение рук которые печатают на нойтбуке" 
-                        width="370"
-                        height="294" 
-                        />
-                    </button>
+                    <img 
+                    src="./images/portfolio6.jpg" 
+                    alt="Изображение монитора на котором откріт веб-сайт компании"
+                    width="370" 
+                    height="294" 
+                    />
                     <section>
-                        <h2 lang="en">Growing Business</h2>
-                        <p>Приложение</p>
+                        <h2 class="portfolio-work-example-heder" lang="en">Inspiration has no Borders</h2>
+                        <p class="portfolio-work-example-text">Веб-сайт</p>
+                    </section>
+                </li>
+                <li>
+                    <img 
+                    src="./images/portfolio7.jpg" 
+                    alt="Изображение расскрытой книги"
+                    width="370" 
+                    height="294" 
+                    />
+                    <section>
+                        <h2 class="portfolio-work-example-heder">Издание<span lang="en"> Limited Edition</span></h2>
+                        <p class="portfolio-work-example-text">Дизайн</p>
+                    </section>   
+                </li>
+                <li>
+                    <img 
+                    src="./images/portfolio7.jpg" 
+                    alt="Изображение расскрытой книги"
+                    width="370" 
+                    height="294" 
+                    />
+                    <section>
+                        <h2 class="portfolio-work-example-heder">Издание<span lang="en"> Limited Edition</span></h2>
+                        <p class="portfolio-work-example-text">Дизайн</p>
+                    </section>   
+                </li>
+                <li>
+                    <img 
+                    src="./images/portfolio8.jpg" 
+                    alt="Изображение бумажной бирки с надписью" 
+                    width="370" 
+                    height="294" 
+                    />
+                    <section>
+                        <h2 class="portfolio-work-example-heder">Проект<span lang="en"> LAB</span></h2>
+                        <p class="portfolio-work-example-text">Маркетинг</p>
+                    </section>
+                </li>
+                <li>
+                    <img 
+                    src="./images/portfolio9.jpg" 
+                    alt="Изображение рук которые печатают на нойтбуке" 
+                    width="370"
+                    height="294" 
+                    />
+                    <section>
+                        <h2 class="portfolio-work-example-heder" lang="en">Growing Business</h2>
+                        <p class="portfolio-work-example-text">Приложение</p>
                     </section>
                 </li>
             </ul>
         </section>
     </main>
-
     <footer class="footer">
         <section class="information-contacts" id="contacts">
             <a class="link logo-footer" href="./index.html" hreflang="en">
