--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h2 class="studio-section-team-header">Наша команда</h2>
             <ul class="list ">
                 <li class="studio-section-team-list">
-                    <img class="studio-section-team-list-img"src="./images/foto1.jpg" alt="Молодой тёмноволосый мужчина в очках и в коричневой рубашке" width="270"/>
+                    <img class="studio-section-team-list-img" src="./images/foto1.jpg" alt="Молодой тёмноволосый мужчина в очках и в коричневой рубашке" width="270"/>
                     <h3 class="studio-section-team-list-header" >Игорь Демьяненко</h3>
                     <p class="studio-section-team-list-text" lang="en">Product Designer</p>                     
                 </li>
@@ -96,7 +96,8 @@
         </section> 
     </main>
     <footer class="footer">
-        <section  class="information-contacts" id="contacts">
+        <section class="information" id="contacts">
+            <h2 hidden>Контакты</h2>
             <a class="link logo-footer" href="./index.html" hreflang="en">
                 <span class="logo-style">Web</span>Studio
             </a>
