--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="shortcut icon" href="#" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -30,6 +29,8 @@
         </ul>
     </header>
     <main class="portfolio-section-work-examples">
+        <section>
+            <h1 hidden>Фильтр</h1>
             <ul class="list">
                 <li>
                     <button class="portfolio-filter-all current" type="button">Все</button>
@@ -47,6 +48,8 @@
                     <button class="portfolio-filter current" type="button">Маркетинг</button>
                 </li>
             </ul>
+            </section>
+            <section>
             <ul class="list">
                 <li>
                     <img src="./images/portfolio1.jpg" alt="Изображение ноутбука на котором открыта сраница сайта технокряк"
@@ -105,28 +108,26 @@
                     <p class="portfolio-work-example-text">Приложение</p>
                 </li>
             </ul>
+            </section>
     </main>
     <footer class="footer">
-        <section class="information" id="contacts">
-            <h2 hidden>Контакты</h2>
-            <a class="link logo-footer" href="./index.html" hreflang="en">
-                <span class="logo-style">Web</span>Studio
-            </a>
-            <address>
-                <ul class="list ">
-                    <li>
-                        <a class="link address-link" href="https://goo.gl/maps/MdQDLqu88i6RNA2y6" target="_blank"
-                            rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
-                    </li>
-                    <li>
-                        <a class="link mailo-link" href="mailo:info@devstudio.com">info@devstudio.com</a>
-                    </li>
-                    <li>
-                        <a class="link phone-link" href="tel:+380961111111">+380961111111</a>
-                    </li>
-                </ul>
-            </address>
-        </section>
+        <a class="link logo-footer" href="./index.html" hreflang="en">
+            <span class="logo-style">Web</span>Studio
+        </a>
+        <address class="information" id="contacts">
+            <ul class="list ">
+                <li>
+                    <a class="link address-link" href="https://goo.gl/maps/MdQDLqu88i6RNA2y6" target="_blank"
+                        rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                </li>
+                <li>
+                    <a class="link mailo-link" href="mailo:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a class="link phone-link" href="tel:+380961111111">+380961111111</a>
+                </li>
+            </ul>
+        </address>
     </footer>
 </body>
 </html>
